# dbc-cpp

./: .gitmodules  CMakeLists.txt  LICENCE.rst  Makefile  Makefile.dep  README.rst
doc/: README-SQL-tracing.rst  README-factory.rst
include/dbccpp/: CountProxy.h  DbConnection.h  DbExceptions.h  ParameterTracker.h  PreparedStatement.h  PreparedStatementBinder.h  ResultSet.h  SubscriptProxy.h  dbccpp.h  detect_cpp11.h
src/: DbConnection.cpp  DbConnectionFactory.cpp  DbConnectionFactory.h  PreparedStatement.cpp  ResultSet.cpp
src/mysql/: MySQLConnection.cpp  MySQLConnection.h  MySQLCountProxy.cpp  MySQLCountProxy.h  MySQLExceptions.h  MySQLPreparedStatement.cpp  MySQLPreparedStatement.h  MySQLResultSet.cpp  MySQLResultSet.h
src/sqlite/: SQLiteConnection.cpp  SQLiteConnection.h  SQLiteCountProxy.cpp  SQLiteCountProxy.h  SQLiteExceptions.h  SQLitePreparedStatement.cpp  SQLitePreparedStatement.h  SQLiteResultSet.cpp  SQLiteResultSet.h
test/src/: main.cpp
visual studio/: .gitignore
visual studio/dbc-cpp/: README.rst  dbc-cpp.sln  dbc-cpp.vcproj  sqlite.vcproj  test.vcproj
